# oxidized-trombone

./: README.md  package-lock.json  package.json
.state/workspaces/0680b236_CF01/: CMakeLists.txt  LESSON.md
.state/workspaces/0680b236_CF01/.debug/: 00-scaffold-in.json  01-scaffold-out.json  02-starter-expand-1-in.json  03-starter-expand-1-out.json  04-starter-expand-2-in.json  05-starter-expand-2-out.json  06-test-expand-1-in.json  07-test-expand-1-out.json  08-lesson-expand-1-in.json  09-lesson-expand-1-out.json  10-lesson-expand-2-in.json  11-lesson-expand-2-out.json  12-lesson-expand-3-in.json  13-lesson-expand-3-out.json  14-lesson-expand-4-in.json  15-lesson-expand-4-out.json  16-lesson-expand-5-in.json  17-lesson-expand-5-out.json  18-lesson-expand-6-in.json  19-lesson-expand-6-out.json  20-lesson-expand-7-in.json  21-lesson-expand-7-out.json  22-lesson-expand-8-in.json  23-lesson-expand-8-out.json
.state/workspaces/0680b236_CF01/src/: solution.cpp  solution.h  type_workshop.cpp  type_workshop.h
.state/workspaces/0680b236_CF01/tests/: test_main.cpp  type_workshop_tests.cpp
client/: package-lock.json  package.json
docs/: acceptance-matrix.md  runbook.md
scripts/: resume-runtime-change.sh
tests/: c-systems-curriculum.test.js  cli-guided-flow.test.js  cpp-browser-curriculum.test.js  cpp-curriculum.test.js  custom-topic-flow.test.js  custom-topics-storage.test.js  exercise-loop.test.js  fallback-mode.test.js  fixtures.test.js  integration-flow.test.js  javascript-curriculum.test.js  js-runtime-curriculum.test.js  js-toolchain-rust-curriculum.test.js  (+7 more)
(+448 files in other folders)
